--- a/HTML_tags_identifier.ipynb
+++ b/HTML_tags_identifier.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "HTML_tags_identifier.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ooeyad/Projects/blob/master/HTML_tags_identifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -44,7 +55,8 @@
         "    )\n",
         "\n",
         "for tag, attr in sorted(tag_attributes.items()):\n",
-        "    print(':'.join([tag, ','.join(sorted(set(attr)))]))"
+        "    print(':'.join([tag, ','.join(sorted(set(attr)))]))\n",
+        " "
       ],
       "execution_count": 0,
       "outputs": [
